Almost Ready to Launch Improved downloads screen ID check to check for active player Link to settings app from downloads page Better waiting screens styling Added waiting screen polling to prevent getting stuck Better game end screen styling Added confetti to game end screen Better longer name handling in UI

--- a/game.css
+++ b/game.css
@@ -110,6 +110,11 @@ body {
     transition: all 0.3s;
 }
 
+.player-name.long {
+    letter-spacing: 6px;
+    font-size: 88px;
+}
+
 .player-name.hide {
     color: transparent;
 }
@@ -748,6 +753,7 @@ body {
     justify-content: center;
     padding: 40px;
     text-align: center;
+    background: #fff;
 }
 
 .waiting-screen h2 {
@@ -760,6 +766,10 @@ body {
     margin-bottom: 30px;
 }
 
+.notify-bubble {
+    background: rgba(0,0,0,0.1);
+}
+
 .duration-options {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -770,7 +780,7 @@ body {
 .duration-btn {
     padding: 20px;
     border: 2px solid #ddd;
-    background: white;
+    background: rgba(255,255,255,0.2);
     border-radius: 15px;
     cursor: pointer;
     font-weight: 600;
@@ -782,13 +792,55 @@ body {
     color: var(--color-blue);;
 }
 
+.duration-btn.recommended {
+    border-color: var(--color-pink);
+    position: relative;
+    overflow: hidden;
+}
+
+.duration-btn.recommended:after {
+    content: 'Recommended';
+    font-size: 8px;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: var(--color-pink);
+    padding: 2px 0;
+}
+
 .game-ended {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
     padding: 40px;
+    color: #e1e1e1;
+    height: 100dvh;
+    position: relative;
+}
+
+.confetti {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+.confetti canvas {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 .winner {
-    font-size: 32px;
+    font-size: 40px;
     font-weight: 900;
     margin-bottom: 20px;
 }
@@ -888,6 +940,30 @@ body {
 
     .history-time {
         color: #ccc;
+    }
+
+    .waiting-screen {
+        background: #111;
+    }
+
+    .waiting-screen h2 {
+        color: #e1e1e1
+    }
+
+    .waiting-screen p {
+        color: #ccc;
+    }
+
+    .waiting-screen .notify-bubble h3 {
+        color: #e1e1e1;
+    }
+
+    .notify-bubble {
+        background: rgba(255,255,255,0.1);
+    }
+
+    .duration-btn {
+        color: #fff;
     }
 }
 
